--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -13,14 +13,10 @@ font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.6;
   color: #000000;
-  background: #ffffff;
+  background-color: #5b6467;
+background-image: linear-gradient(315deg, #5b6467 0%, #8b939a 74%);
 }
 
-
-section {
-  margin: 80px 0;
-
-}
 hr {
   border: 0;
   height: 4px;
@@ -51,7 +47,7 @@ h2 {
   font-size: 30px;
   line-height: 30px;
   text-align: center;
-  color: #000000;
+  color: #ffffff;
 }
 
 h3  {
@@ -135,7 +131,6 @@ ul li a  {
   color: #000000;
   position: relative;
   text-decoration: none;
-    font-family: 'Gloria Hallelujah', cursive;
 }
 
 ul li a:hover  {
@@ -169,7 +164,6 @@ ul li a:after {
   color:#162021;
   font-size: 25px;
   padding: 15px 0 15px 15px;
-  font-family: 'Gloria Hallelujah', cursive;
 }
 
 
@@ -201,11 +195,20 @@ ul li a:after {
 	bottom:-10px;
 }
 
+.hero-background-cover img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  width: 100%;
+}
+
+
 @media only screen and (min-width: 768px) {
 
-  section {
-    margin: 120px 0;
-  }
+
 
   nav {
     float: right;
@@ -225,7 +228,6 @@ ul li a:after {
     background-color:#ffffff;
     padding-top: 21px;
     color: #fff;
-    font-family: 'Gloria Hallelujah', cursive;
   }
 
   nav ul li {
@@ -441,13 +443,13 @@ a.view-site:hover {
   width: 100%;
 }
 
-.about h1 {
-  color:#000000;
+.about-wrap h1 {
+  color:#ffffff;
 }
 
 .about-wrap p {
   font-size: 18px;
-  color:#000000;
+  color:#ffffff;
 }
 
 .about-wrap p a {
